[package]
name = "concurrent_lru"
version = "0.1.0"
authors = ["Jianong Zhong <zhongjn0@foxmail.com>"]
edition = "2018"
description = "A concurrent LRU cache"
homepage = "https://github.com/ngkv/concurrent_lru"
repository = "https://github.com/ngkv/concurrent_lru.git"
readme = "README.md"
license = "MIT"
keywords = ["concurrent", "LRU", "cache"]
categories = ["concurrency", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.5.2"

[dev-dependencies]
rand = "0.8.3"